--- a/app/src/main/res/layout/activity_input_ruko.xml
+++ b/app/src/main/res/layout/activity_input_ruko.xml
@@ -152,7 +152,7 @@
                             android:layout_height="wrap_content"
                             android:layout_alignParentLeft="true"
                             android:layout_alignParentTop="true"
-                            android:inputType="numberDecimal"/>
+                            android:inputType="textPersonName" />
 
                     </LinearLayout>
 
