--- a/app/src/main/res/layout/activity_edit_ruko.xml
+++ b/app/src/main/res/layout/activity_edit_ruko.xml
@@ -26,6 +26,7 @@
 
                 <ImageView
                     android:id="@+id/img_ruko"
+                    android:src="@drawable/ic_stub"
                     android:layout_width="match_parent"
                     android:layout_height="210dp"
                     android:background="?attr/selectableItemBackgroundBorderless"
@@ -46,26 +47,11 @@
                         android:layout_marginBottom="5dp">
 
                         <TextView
-                            android:id="@+id/txt_jdl"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="[judul]"
-                            android:textStyle="bold"/>
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:layout_marginBottom="5dp">
-
-                        <TextView
                             android:layout_width="150dp"
                             android:layout_height="wrap_content"
                             android:layout_alignParentLeft="true"
                             android:layout_alignParentTop="true"
-                            android:text="Status"/>
+                            android:text="Pilih Kecamatan"/>
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -73,10 +59,43 @@
                             android:text=": "/>
 
                         <TextView
-                            android:id="@+id/txt_sts"
-                            android:layout_width="match_parent"
+                            android:id="@+id/btn_kecamatan"
+                            android:layout_width="140dp"
                             android:layout_height="wrap_content"
-                            android:text="[status]"/>
+                            android:layout_alignParentLeft="true"
+                            android:layout_alignParentTop="true"
+                            android:textStyle="bold"
+                            android:text="Kecamatan belum dipilih"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:gravity="center"
+                        android:layout_marginBottom="5dp">
+
+                        <TextView
+                            android:layout_width="150dp"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentLeft="true"
+                            android:layout_alignParentTop="true"
+                            android:text="Judul"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text=": "/>
+
+                        <EditText
+                            android:id="@+id/edt_judul"
+                            android:layout_width="140dp"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentLeft="true"
+                            android:layout_alignParentTop="true"
+                            android:inputType="textPersonName"/>
+
                     </LinearLayout>
 
                     <LinearLayout
@@ -98,13 +117,13 @@
                             android:layout_height="wrap_content"
                             android:text=": "/>
 
-                        <TextView
-                            android:id="@+id/txt_hrga"
-                            android:layout_width="match_parent"
+                        <EditText
+                            android:id="@+id/edt_hrga"
+                            android:layout_width="140dp"
                             android:layout_height="wrap_content"
                             android:layout_alignParentLeft="true"
                             android:layout_alignParentTop="true"
-                            android:text="[harga] / Thn"/>
+                            android:inputType="numberDecimal"/>
 
                     </LinearLayout>
 
@@ -127,13 +146,13 @@
                             android:layout_height="wrap_content"
                             android:text=": "/>
 
-                        <TextView
-                            android:id="@+id/txt_ukrn"
-                            android:layout_width="match_parent"
+                        <EditText
+                            android:id="@+id/edt_ukrn"
+                            android:layout_width="140dp"
                             android:layout_height="wrap_content"
                             android:layout_alignParentLeft="true"
                             android:layout_alignParentTop="true"
-                            android:text="[ukuran] m"/>
+                            android:inputType="textPersonName" />
 
                     </LinearLayout>
 
@@ -156,13 +175,13 @@
                             android:layout_height="wrap_content"
                             android:text=": "/>
 
-                        <TextView
-                            android:id="@+id/txt_l_bgnn"
-                            android:layout_width="match_parent"
+                        <EditText
+                            android:id="@+id/edt_l_bgnn"
+                            android:layout_width="140dp"
                             android:layout_height="wrap_content"
                             android:layout_alignParentLeft="true"
                             android:layout_alignParentTop="true"
-                            android:text="[luas bangunan] m"/>
+                            android:inputType="numberDecimal"/>
 
                     </LinearLayout>
 
@@ -185,13 +204,13 @@
                             android:layout_height="wrap_content"
                             android:text=": "/>
 
-                        <TextView
-                            android:id="@+id/txt_l_tnh"
-                            android:layout_width="match_parent"
+                        <EditText
+                            android:id="@+id/edt_l_tnh"
+                            android:layout_width="140dp"
                             android:layout_height="wrap_content"
                             android:layout_alignParentLeft="true"
                             android:layout_alignParentTop="true"
-                            android:text="[luas tanah] m"/>
+                            android:inputType="numberDecimal"/>
 
                     </LinearLayout>
 
@@ -214,13 +233,13 @@
                             android:layout_height="wrap_content"
                             android:text=": "/>
 
-                        <TextView
-                            android:id="@+id/txt_jum_kmr"
-                            android:layout_width="match_parent"
+                        <EditText
+                            android:id="@+id/edt_jum_kmr"
+                            android:layout_width="140dp"
                             android:layout_height="wrap_content"
                             android:layout_alignParentLeft="true"
                             android:layout_alignParentTop="true"
-                            android:text="[jumlah kamar]"/>
+                            android:inputType="numberDecimal"/>
 
                     </LinearLayout>
 
@@ -243,13 +262,13 @@
                             android:layout_height="wrap_content"
                             android:text=": "/>
 
-                        <TextView
-                            android:id="@+id/txt_kmr_mndi"
-                            android:layout_width="match_parent"
+                        <EditText
+                            android:id="@+id/edt_kmr_mndi"
+                            android:layout_width="140dp"
                             android:layout_height="wrap_content"
                             android:layout_alignParentLeft="true"
                             android:layout_alignParentTop="true"
-                            android:text="[kamar mandi]"/>
+                            android:inputType="numberDecimal"/>
 
                     </LinearLayout>
 
@@ -272,13 +291,13 @@
                             android:layout_height="wrap_content"
                             android:text=": "/>
 
-                        <TextView
-                            android:id="@+id/txt_dy_lstrk"
-                            android:layout_width="match_parent"
+                        <EditText
+                            android:id="@+id/edt_dy_lstrk"
+                            android:layout_width="140dp"
                             android:layout_height="wrap_content"
                             android:layout_alignParentLeft="true"
                             android:layout_alignParentTop="true"
-                            android:text="[daya listrik]"/>
+                            android:inputType="numberDecimal"/>
 
                     </LinearLayout>
 
@@ -301,13 +320,43 @@
                             android:layout_height="wrap_content"
                             android:text=": "/>
 
-                        <TextView
-                            android:id="@+id/txt_srtfkt"
-                            android:layout_width="match_parent"
+                        <EditText
+                            android:id="@+id/edt_srtfkt"
+                            android:layout_width="140dp"
                             android:layout_height="wrap_content"
                             android:layout_alignParentLeft="true"
                             android:layout_alignParentTop="true"
-                            android:text="[sertifikat]"/>
+                            android:inputType="textPersonName"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:gravity="center"
+                        android:layout_marginBottom="5dp">
+
+                        <Button
+                            android:id="@+id/btn_lokasi"
+                            android:layout_width="wrap_content"
+                            android:layout_weight="1"
+                            android:layout_height="wrap_content"
+                            android:text="Tentukan lokasi"
+                            android:textSize="20px"
+                            android:drawableLeft="@drawable/ic_location"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text=": "/>
+
+                        <TextView
+                            android:id="@+id/txt_lokasi"
+                            android:layout_width="140dp"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentLeft="true"
+                            android:layout_alignParentTop="true"/>
 
                     </LinearLayout>
 
@@ -317,29 +366,13 @@
                         android:orientation="horizontal"
                         android:padding="5dp">
                         <Button
-                            android:id="@+id/btn_edit"
+                            android:id="@+id/btn_update"
                             android:layout_width="wrap_content"
                             android:layout_weight="1"
                             android:layout_height="wrap_content"
-                            android:text="Hubungi"
+                            android:text="Update Ruko"
                             android:textSize="20px"
-                            android:drawableLeft="@drawable/ic_call_black"/>
-                        <Button
-                            android:id="@+id/btn_sekitar"
-                            android:layout_width="wrap_content"
-                            android:layout_weight="1"
-                            android:layout_height="wrap_content"
-                            android:text="Sekitaran Ruko"
-                            android:textSize="20px"
-                            android:drawableLeft="@drawable/ic_location"/>
-                        <Button
-                            android:id="@+id/btn_hapus"
-                            android:layout_width="wrap_content"
-                            android:layout_weight="1"
-                            android:layout_height="wrap_content"
-                            android:text="Ke lokasi"
-                            android:textSize="20px"
-                            android:drawableLeft="@drawable/ic_directions"/>
+                            android:drawableLeft="@drawable/ic_create"/>
                     </LinearLayout>
 
                 </LinearLayout>
