--- a/app/src/main/res/layout/activity_ruko_pemilik_detail.xml
+++ b/app/src/main/res/layout/activity_ruko_pemilik_detail.xml
@@ -58,6 +58,31 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
+                        android:layout_marginBottom="5dp">
+
+                        <TextView
+                            android:layout_width="150dp"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentLeft="true"
+                            android:layout_alignParentTop="true"
+                            android:text="Status"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text=": "/>
+
+                        <TextView
+                            android:id="@+id/txt_sts"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="[status]"/>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
                         android:gravity="center"
                         android:layout_marginBottom="5dp">
 
@@ -315,6 +340,28 @@
                             android:text="Hapus Ruko"
                             android:textSize="20px"
                             android:drawableLeft="@drawable/ic_delete"/>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:padding="5dp">
+                        <Button
+                            android:id="@+id/btn_tandai"
+                            android:layout_width="wrap_content"
+                            android:layout_weight="1"
+                            android:layout_height="wrap_content"
+                            android:text="Tandai telah disewa"
+                            android:textSize="20px"/>
+                        <Button
+                            android:id="@+id/btn_edit"
+                            android:layout_width="wrap_content"
+                            android:layout_weight="1"
+                            android:layout_height="wrap_content"
+                            android:text="Edit Ruko"
+                            android:textSize="20px"/>
+
                     </LinearLayout>
 
                 </LinearLayout>
