--- a/app/src/main/res/layout/item_ruko.xml
+++ b/app/src/main/res/layout/item_ruko.xml
@@ -61,6 +61,15 @@
                 android:text="[harga]"
                 android:textSize="13dp" />
 
+            <TextView
+                android:id="@+id/status"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:text="[status]"
+                android:textSize="13dp" />
+
         </LinearLayout>
     </LinearLayout>
 </android.support.v7.widget.CardView>
